# Light_audio_ctrl_demo

./: README.md
tita_interfaces/tita_locomotion_interfaces/: package.xml
tita_interfaces/tita_perception_interfaces/: package.xml
tita_interfaces/tita_system_interfaces/srv/: PlayAudioWithFilePath.srv  RgbControllerSrv.srv
tita_ws/src/light_control/: package.xml  setup.cfg  setup.py
tita_ws/src/light_control/config/: param.yaml
tita_ws/src/light_control/launch/: light_audio_control.launch.py
tita_ws/src/light_control/light_control/: light_control_node.py
tita_ws/src/playaudio/: package.xml  setup.cfg  setup.py
tita_ws/src/playaudio/playaudio/: playAudio_node.py
tita_ws/src/tita_interfaces/tita_locomotion_interfaces/: CMakeLists.txt  README.md
tita_ws/src/tita_interfaces/tita_locomotion_interfaces/msg/: LocomotionCmd.msg
tita_ws/src/tita_interfaces/tita_perception_interfaces/: CMakeLists.txt  README.md
tita_ws/src/tita_interfaces/tita_perception_interfaces/msg/: BoundingBox.msg
tita_ws/src/tita_interfaces/tita_system_interfaces/: CMakeLists.txt  package.xml
tita_ws/src/tita_interfaces/tita_system_interfaces/srv/: PlayAudioSystemPrompts.srv
